@@ -31,7 +31,10 @@
  *
  */
 
+#include <stdlib.h>
+#include <string.h>
 #include "shapefil.h"
+
 int dbfcat_main( int argc, char ** argv );
 
 int main( int argc, char ** argv )
