@@ -27,6 +27,9 @@
  * 
  *
  * $Log$
+ * Revision 1.4  2011-07-24 03:17:46  fwarmerdam
+ * include string.h and stdlib.h where needed in contrib (#2146)
+ *
  * Revision 1.3  2002-04-15 21:33:03  warmerda
  * Avoid dereference arrays.
  *
@@ -39,6 +42,8 @@
  *
  */
 
+#include <stdlib.h>
+#include <string.h>
 #include "shapefil.h"
 
 int main( int argc, char ** argv )
